--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
+
+.idea/*
+
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
@@ -52,6 +55,10 @@ cmake-build-*/
 # IntelliJ
 out/
 
+ClientChat/ClientChat.iml
+Server/Server.iml
+Commands/Commands.iml
+
 # mpeltonen/sbt-idea plugin
 .idea_modules/
 
@@ -75,3 +82,4 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+/ClientChat/target/
